crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@145.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": {\"c\": {\"b\": 1}}}' @? '$.**{2 to 3}.b ? ( @ > 0)';"
---
SelectStmt@0..69
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..68
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..68
      TypeCast@13..37
        AConst@13..37
          Sconst@13..37 "'{\"a\": {\"c\": {\"b\": 1}}}'"
      Whitespace@37..38 " "
      Op@38..40 "@?"
      Whitespace@40..41 " "
      AConst@41..68
        Sconst@41..68 "'$.**{2 to 3}.b ? ( @ ..."
  Ascii59@68..69 ";"

