crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@146.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"g\": {\"x\": 2}}', '$.g ? (exists (@.x))');"
---
SelectStmt@0..67
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..65
    FuncCall@7..65
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..41
        Sconst@24..41 "'{\"g\": {\"x\": 2}}'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..65
        Sconst@43..65 "'$.g ? (exists (@.x))'"
  Ascii41@65..66 ")"
  Ascii59@66..67 ";"

