crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@148.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"g\": {\"x\": 2}}', '$.g ? (exists (@.x ? (@ >= 2) ))');"
---
SelectStmt@0..79
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..77
    FuncCall@7..77
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..41
        Sconst@24..41 "'{\"g\": {\"x\": 2}}'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..77
        Sconst@43..77 "'$.g ? (exists (@.x ? ..."
  Ascii41@77..78 ")"
  Ascii59@78..79 ";"

