crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@149.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"g\": [{\"x\": 2}, {\"y\": 3}]}', 'lax $.g ? (exists (@.x))');"
---
SelectStmt@0..83
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..81
    FuncCall@7..81
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..53
        Sconst@24..53 "'{\"g\": [{\"x\": 2}, {\"y ..."
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..81
        Sconst@55..81 "'lax $.g ? (exists (@ ..."
  Ascii41@81..82 ")"
  Ascii59@82..83 ";"

