crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@15.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": {\"b\": 1}}' @? 'lax $.**{2}';"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..47
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..47
      TypeCast@13..30
        AConst@13..30
          Sconst@13..30 "'{\"a\": {\"b\": 1}}'"
      Whitespace@30..31 " "
      Op@31..33 "@?"
      Whitespace@33..34 " "
      AConst@34..47
        Sconst@34..47 "'lax $.**{2}'"
  Ascii59@47..48 ";"

