crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@151.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"g\": [{\"x\": 2}, {\"y\": 3}]}', 'lax $.g ? ((exists (@.x + \"3\")) is unknown)');"
---
SelectStmt@0..102
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..100
    FuncCall@7..100
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..53
        Sconst@24..53 "'{\"g\": [{\"x\": 2}, {\"y ..."
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..100
        Sconst@55..100 "'lax $.g ? ((exists ( ..."
  Ascii41@100..101 ")"
  Ascii59@101..102 ";"

