crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@154.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"g\": [{\"x\": 2}, {\"y\": 3}]}', 'strict $.g ? (exists (@[*].x))');"
---
SelectStmt@0..89
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..87
    FuncCall@7..87
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..53
        Sconst@24..53 "'{\"g\": [{\"x\": 2}, {\"y ..."
      Ascii44@53..54 ","
      Whitespace@54..55 " "
      AConst@55..87
        Sconst@55..87 "'strict $.g ? (exists ..."
  Ascii41@87..88 ")"
  Ascii59@88..89 ";"

